--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
+    # Log in to Docker Hub
     - name: Login to Docker Hub
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    # Build the Docker image
     - name: Build the Docker image
-      run: docker build -t dockerec2 .
+      run: docker build -t aneesh3894/dockerec2 .
+
+    # Push the Docker image
     - name: Push to Dockerhub
       run: docker push aneesh3894/dockerec2:latest
